first changes on content; getting used to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ nav:
 - Meeting tips:
   - Meeting 1: meetings/one.md
 - Contact: contact.md
-#- Acknowledgements: acknowledgement.md
+- Acknowledgements: acknowledgement.md
 
 theme: 
   name: 'material'
