Resolved the issues except the 5th one

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,7 @@ nav:
     - Method: content/method.md
     - Results: content/results.md
     - Discussion: content/discussion.md
-    - Jornals: content/journals.md
+    - Journals: content/journals.md
   - Literature: content/literature.md
 - Process:
   - Managing Expectations: process/expectations.md
